<?xml version="1.0"?>
<package>
  <name>dockeros</name>
  <version>1.0.0</version>
  <description>Simply running ros nodes in docker containers on remote robots.</description>

  <maintainer email="christian.henkel@ipa.fraunhofer.de">ct2034</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>docker-py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>docker-py</run_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
